packages/transpiler/test/fixtures/errors/int8array/input.ts
/**
 * @public
 */
export class Int8ArrayUsage {
    public signed: Int8Array = new Int8Array(0);
}
